build ui slider authentic brand

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./assets/css/content/advertisementBrand.css">
     <link rel="stylesheet" href="./assets/css/content/quickLink.css">
     <link rel="stylesheet" href="./assets/css/content/hotDeal.css">
+    <link rel="stylesheet" href="./assets/css/content/authenticBrand.css">
 </head>
 
 <body>
@@ -128,15 +129,11 @@
                 <div class="content__advertisement content__container d-flex justify-content-between">
                     <div class="content__advertisement-slider position-relative">
                         <!-- Button left in slick function advertisementSlider.js-->
-                        <ul class="content__advertisement-slider--list d-flex">
+                        <ul class="content__advertisement-slider--list">
                             <!-- Render in advertisementSlider.js -->
                         </ul>
                         <!-- Button right in slick function advertisementSlider.js-->
-
-                        <ul
-                            class="content__advertisement-slider--dot-list d-flex justify-content-center position-absolute">
-                            <!-- Dot items in slick function advertisementSlider.js -->
-                        </ul>
+                        <!-- Dot items in slick function advertisementSlider.js -->
                     </div>
 
                     <div class="content__advertisement-image">
@@ -450,10 +447,8 @@
                                     <img class="position-absolute top-50 start-50 translate-middle" src="./assets/images/content/advertisementPrice/mute-sound-icon.png" alt="Sound">
                                 </div>
                             </div>
-                        </div>
-                        <ul class="content__advertisement-price--slider__dots-list position-absolute d-flex align-items-center">
-                            <!-- Dot items in slick function advertisementPrice.js -->
-                        </ul>
+                        </div>                        
+                        <!-- Dot items in slick function advertisementPrice.js -->
                     </div>
                 </div>
             </div>
@@ -529,13 +524,13 @@
                         <img  class="content__hot-deal--img" src="./assets/images/content/hotDeal/hotDeal1.png" alt="hot-deal">
                     </a>
                     <a href="/" class="content__hot-deal--link">
-                        <img  class="content__hot-deal--img" src="./assets/images/content/hotDeal/hotDeal1.png" alt="hot-deal">
+                        <img  class="content__hot-deal--img" src="./assets/images/content/hotDeal/hotDeal2.png" alt="hot-deal">
                     </a>
                     <a href="/" class="content__hot-deal--link">
-                        <img  class="content__hot-deal--img" src="./assets/images/content/hotDeal/hotDeal1.png" alt="hot-deal">
+                        <img  class="content__hot-deal--img" src="./assets/images/content/hotDeal/hotDeal3.png" alt="hot-deal">
                     </a>
                     <a href="/" class="content__hot-deal--link">
-                        <img  class="content__hot-deal--img" src="./assets/images/content/hotDeal/hotDeal1.png" alt="hot-deal">
+                        <img  class="content__hot-deal--img" src="./assets/images/content/hotDeal/hotDeal4.png" alt="hot-deal">
                     </a>
                 </div>
             </div>
@@ -544,14 +539,86 @@
             <!-- Begin Authentic branch -->
             <div class="app__container">
                 <div class="content__authentic-brand">
-                    <div class="content__authentic-brand--header">
-
+                    <div class="content__authentic-brand--header d-flex align-items-center justify-content-between">
+                        <div class="content__authentic-brand--header__title d-flex align-items-center">
+                            <img src="./assets/images/content/authenticBrand/tick-icon.png" alt="tick-icon" class="content__authentic-brand--header__icon">
+                            <span class="content__authentic-brand--header__text text-capitalize">thương hiệu chính hãng</span>
+                        </div>
+                        <a class="content__authentic-brand--header__seemore text-uppercase" href="/">xem thêm</a>
                     </div>
                     <div class="content__authentic-brand--slider">
-
+                        <ul class="content__authentic-brand--slider__list">
+                            <!-- Prev & Next btn of slider in slick function authenticBrand.js -->
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider1.png" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider2.png" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider3.png" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider5.jpg" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider6.jpg" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider7.png" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider8.png" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider9.png" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider10.png" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider11.png" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider12.png" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider13.jpg" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <li class="content__authentic-brand--slider__item">
+                                <a href="/" class="content__authentic-brand--slider__link">
+                                    <img src="./assets/images/content/authenticBrand/slider14.png" alt="" class="content__authentic-brand--slider__img">
+                                </a>
+                            </li>
+                            <!-- Dots item in slick function authenticBrand.js  -->
+                        </ul>
                     </div>
                     <div class="content__authentic-brand--product">
-                        
+
                     </div>
                 </div>
             </div>
@@ -575,6 +642,7 @@
     <script src="./assets/js/content/categories.js"></script>
     <script src="./assets/js/content/advertisementSlider.js"></script>
     <script src="./assets/js/content/advertisementPrice.js"></script>
+    <script src="./assets/js/content/authenticBrand.js"></script>
 </body>
 
 </html>
