build ui featured categories

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./assets/css/content/quickLink.css">
     <link rel="stylesheet" href="./assets/css/content/hotDeal.css">
     <link rel="stylesheet" href="./assets/css/content/authenticBrand.css">
+    <link rel="stylesheet" href="./assets/css/content/featuredCategories.css">
 </head>
 
 <body>
@@ -734,6 +735,95 @@
             </div>
             <!-- End Authentic branch -->
 
+            <!-- Begin Featured categories -->
+            <div class="app__container">
+                <div class="content__featured-categories">
+                    <h2 class="content__featured-categories--header text-capitalize">danh mục nổi bật</h2>
+                    <div class="content__featured-categories--product d-grid">
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product1.png" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">NGON</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product2.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Giày thể thao nam</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product3.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Balo</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product1.png" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">NGON</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product2.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Giày thể thao nam</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product3.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Balo</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product1.png" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">NGON</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product2.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Giày thể thao nam</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product3.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Balo</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product1.png" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">NGON</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product2.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Giày thể thao nam</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product3.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Balo</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product1.png" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">NGON</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product2.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Giày thể thao nam</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product3.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Balo</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product1.png" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">NGON</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product2.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Giày thể thao nam</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product3.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Balo</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product1.png" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">NGON</h3>
+                        </a>
+                        <a href="/" class="content__featured-categories--product__item d-flex flex-column align-items-center">
+                            <img src="./assets/images/content/featuredCategories/product2.jpg" alt="" class="content__featured-categories--product__img">
+                            <h3 class="content__featured-categories--product__title">Giày thể thao nam</h3>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- End Featured Categories -->
         </main>
         <!-- End Content -->
 
