insert middle banner images

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./assets/css/content/hotDeal.css">
     <link rel="stylesheet" href="./assets/css/content/authenticBrand.css">
     <link rel="stylesheet" href="./assets/css/content/featuredCategories.css">
+    <link rel="stylesheet" href="./assets/css/content/middleBanner.css">
 </head>
 
 <body>
@@ -824,6 +825,22 @@
                 </div>
             </div>
             <!-- End Featured Categories -->
+
+            <!-- Begin middle Banner -->
+            <div class="app__container">
+                <div class="content__middle-banners d-flex justify-content-between">
+                    <a href="" class="content__middle-banner--link overflow-hidden">
+                        <img src="./assets/images/content/middleBanner/middleBanner1.png" alt="" class="content__middle-banner--img">
+                    </a>
+                    <a href="" class="content__middle-banner--link overflow-hidden">
+                        <img src="./assets/images/content/middleBanner/middleBanner2.png" alt="" class="content__middle-banner--img">
+                    </a>
+                    <a href="" class="content__middle-banner--link overflow-hidden">
+                        <img src="./assets/images/content/middleBanner/middleBanner3.png" alt="" class="content__middle-banner--img">
+                    </a>
+                </div>
+            </div>
+            <!-- End middle Banner -->
         </main>
         <!-- End Content -->
 
