build ui header suggestion today

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="./assets/css/content/authenticBrand.css">
     <link rel="stylesheet" href="./assets/css/content/featuredCategories.css">
     <link rel="stylesheet" href="./assets/css/content/middleBanner.css">
+    <link rel="stylesheet" href="./assets/css/content/suggestionsToday.css">
 </head>
 
 <body>
@@ -841,6 +842,53 @@
                 </div>
             </div>
             <!-- End middle Banner -->
+
+            <!-- Begin suggestion today -->
+            <div class="app__container">
+                <div class="content__suggestion-today d-flex flex-column">
+                    <div class="content__suggestion-today--header position-sticky top-0">
+                        <h2 class="content__suggestion-today--header__title text-capitalize">gợi ý hôm nay</h2>
+                        <div class="content__suggestion-today--header__tab d-grid">
+                            <div class="content__suggestion-today--header__tab-item d-flex flex-column align-items-center">
+                                <img src="./assets/images/content/suggestionsToday/header/danhChoBan.png" alt="tab item" class="content__suggestion-today--header__tab-img">
+                                <span class="content__suggestion-today--headerr__tab-text">Dành cho bạn</span>
+                            </div>
+                            <div class="content__suggestion-today--header__tab-item d-flex flex-column align-items-center">
+                                <img src="./assets/images/content/suggestionsToday/header/sieuSale.png" alt="tab item" class="content__suggestion-today--header__tab-img">
+                                <span class="content__suggestion-today--headerr__tab-text">8.8 Siêu Sale</span>
+                            </div>
+                            <div class="content__suggestion-today--header__tab-item d-flex flex-column align-items-center">
+                                <img src="./assets/images/content/suggestionsToday/header/mua1duoc8.png" alt="tab item" class="content__suggestion-today--header__tab-img">
+                                <span class="content__suggestion-today--headerr__tab-text">Mua 1 Được 8</span>
+                            </div>
+                            <div class="content__suggestion-today--header__tab-item d-flex flex-column align-items-center">
+                                <img src="./assets/images/content/suggestionsToday/header/dealSieuHot.png" alt="tab item" class="content__suggestion-today--header__tab-img">
+                                <span class="content__suggestion-today--headerr__tab-text">Deal Siêu Hot</span>
+                            </div>
+                            <div class="content__suggestion-today--header__tab-item d-flex flex-column align-items-center">
+                                <img src="./assets/images/content/suggestionsToday/header/reVoDoi.png" alt="tab item" class="content__suggestion-today--header__tab-img">
+                                <span class="content__suggestion-today--headerr__tab-text">Rẻ vô đối</span>
+                            </div>
+                            <div class="content__suggestion-today--header__tab-item d-flex flex-column align-items-center">
+                                <img src="./assets/images/content/suggestionsToday/header/hangMoi.png" alt="tab item" class="content__suggestion-today--header__tab-img">
+                                <span class="content__suggestion-today--headerr__tab-text">Hàng mới</span>
+                            </div>
+                            <div class="content__suggestion-today--header__tab-item d-flex flex-column align-items-center">
+                                <img src="./assets/images/content/suggestionsToday/header/xuHuongThoiTrang.png" alt="tab item" class="content__suggestion-today--header__tab-img">
+                                <span class="content__suggestion-today--headerr__tab-text">Xu hướng thời trang</span>
+                            </div>
+                            <div class="content__suggestion-today--header__tab-item d-flex flex-column align-items-center">
+                                <img src="./assets/images/content/suggestionsToday/header/trending.png" alt="tab item" class="content__suggestion-today--header__tab-img">
+                                <span class="content__suggestion-today--headerr__tab-text">Trending</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content__suggestion-today--product" style="height: 2000px; background-color: #fff;">
+
+                    </div>
+                </div>
+            </div>
+            <!-- End suggestion today -->
         </main>
         <!-- End Content -->
 
