fix bug ui categories

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
         <main class="content">
             <!-- Begin Categories Slider -->
             <div class="content__categories-wrapper">
-                <div class="content__categories">
+                <div class="content__categories overflow-hidden">
+                    
                         <span class="content__categories-icon--wrapper icon-prev d-none">
                             <i class="content__categories-icon d-block fa-solid fa-chevron-left"></i>
                         </span>
@@ -124,6 +125,7 @@
                         <span class="content__categories-icon--wrapper icon-next">
                             <i class="content__categories-icon d-block fa-solid fa-chevron-right"></i>
                         </span>
+                    
                 </div>
             </div>
             <!-- End Categories Slider -->
